tests/type_errors/tuple_where_list_expected.nos
# expect_error: type mismatch
# Passing Tuple where List is expected should be a type error
myList(xs: List[Int]) = xs
main() = myList((1, 2, 3))
